--- a/templates/home.html
+++ b/templates/home.html
@@ -22,17 +22,17 @@
             
             {% if post.like_by == None %}
                 <div class="article-content">
-                    <button type="button" class="btn btn-primary" onclick="window.location.href='{{ url_for('like', thumb_id = post.thumb_id) }}';">Like</button>
+                    <button type="button" class="btn btn-primary" onmouseover="style.fontWeight = 'bold'" onmouseleave="style.fontWeight = 'normal'" onclick="window.location.href='{{ url_for('like', thumb_id = post.thumb_id) }}';">Like</button>
                 </div>
             {% elif user_details.username not in post.like_by %}
                 <div class="article-content">
                     <div class="text-muted">{{ post.like_count }} {{ 'like this' }}</div>
-                    <button type="button" class="btn btn-primary" onclick="window.location.href='{{ url_for('like', thumb_id = post.thumb_id) }}';">Like</button>
+                    <button type="button" class="btn btn-primary" onmouseover="style.fontWeight = 'bold'" onmouseleave="style.fontWeight = 'normal'" onclick="window.location.href='{{ url_for('like', thumb_id = post.thumb_id) }}';">Like</button>
                 </div>
             {% else %}
                 <div class="article-content">
                     <div class="text-muted">{{ 'You and ' }} {{ post.like_count - 1}} {{ 'others like this' }}</div>
-                    <button type="button" class="btn btn-primary" onclick="window.location.href='{{ url_for('unlike', thumb_id = post.thumb_id) }}';">Unlike</button>
+                    <button type="button" class="btn btn-primary" onmouseover="style.fontWeight = 'bold'" onmouseleave="style.fontWeight = 'normal'" onclick="window.location.href='{{ url_for('unlike', thumb_id = post.thumb_id) }}';">Unlike</button>
                 </div>
             {% endif %}
           </div>
