--- a/templates/search_results.html
+++ b/templates/search_results.html
@@ -6,7 +6,7 @@
         </div>
         {% for user in query_results %}
             <article class="media content-section">
-                <h4><a class="article-title" href="{{ url_for('search_user') }}">{{ user.username }}</a></h4>
+                <h4><a class="article-title" href="{{ url_for('user_posts', username=user.username) }}">{{ user.username }}</a></h4>
                 <span style="margin-right:auto;"></span>
                 {% if user.followed %}
                     <button type="button" class="btn btn-primary" style="width: 120px;background-color:white;border-color:red;color:red" onmouseover="style.fontWeight = 'bold'" onmouseleave="style.fontWeight = 'normal'" onclick="window.location.href='{{ url_for('unfollow_user', user=user.username) }}';">Unfollow</button>
