--- a/templates/home.html
+++ b/templates/home.html
@@ -24,7 +24,7 @@
                 <div class="article-content">
                     <button type="button" class="btn btn-primary" onmouseover="style.fontWeight = 'bold'" onmouseleave="style.fontWeight = 'normal'" onclick="window.location.href='{{ url_for('like', thumb_id = post.thumb_id) }}';">Like</button>
                 </div>
-            {% elif user_details.username not in post.like_by %}
+            {% elif session.username not in post.like_by %}
                 <div class="article-content">
                     <div class="text-muted">{{ post.like_count }} {{ 'like this' }}</div>
                     <button type="button" class="btn btn-primary" onmouseover="style.fontWeight = 'bold'" onmouseleave="style.fontWeight = 'normal'" onclick="window.location.href='{{ url_for('like', thumb_id = post.thumb_id) }}';">Like</button>
