standardize title size

--- a/templates/image.html
+++ b/templates/image.html
@@ -2,10 +2,9 @@
 {% block content %}
     <div class="content-section">
         <div class="media">
-            <legend class="border-bottom mb-4">{{ title }}</legend>          
+            <h2>{{ title }}</h2>
         </div>
         <div class="media-body">
-
         <div class="article-content">
             <image src="{{ high_res_url }}" style="height: 100%; width: 100%;object-fit: contain">
         </div>
